<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>myros2_sim_world</name>
  <version>0.0.0</version>
  <description>Bringup launch for my ROS2 Sim world</description>
  <maintainer email="f.steffers@avans.nl">Frido Steffers</maintainer>
  <license>Apache 2.0</license>
  <url type="website"></url>
  <url type="repository"></url>
  <url type="bugtracker"></url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
